06-canary-sticky-multipath-multingress-bad/example/ingress-stable.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stable
  labels:
    app: demo
  annotations:
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "sticky-cookie"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "3600"
spec:
  ingressClassName: nginx
  rules:
    - host: demo.local
      http:
        paths:
        - path: "/echo"
          pathType: ImplementationSpecific
          backend:
            service:
              name: demo-v1
              port:
                name: http
